--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,10 @@
 <html>
-  <title>Assuntos Lab</title>
+  <title>Laboratórios</title>
   <body>
     <ul>
-      <li>Git</li>
-      <li>GitHub</li>
+      <li>Git e GitHub</li>
+      <li>Docker e Kubernetes</li>
       <li>Automated Tests</li>
-      <li>Docker</li>
     <ul>
   </body>
 </html>
