--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,14 @@
 <html>
-  <title>Laboratórios</title>
+  <title>Assuntos Lab</title>
   <body>
     <ul>
-      <li>Git e GitHub</li>
-      <li>Docker e Kubernetes</li>
-<<<<<<< HEAD
-      <li>DDD</li>
-=======
-      <li>Automated Tests</li>
->>>>>>> 655cb59f730cce0a473583e1b2479fd55255c8b9
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>Automated tests</li>
+      <li>Docker</li>
+      <li>Ansible</li>
+      <li>Terraform</li>
+      <li>Kubernetes</li>
     <ul>
   </body>
 </html>
