--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,9 @@
     <ul>
       <li>Git e GitHub</li>
       <li>Docker e Kubernetes</li>
+      <li>DDD</li>
       <li>Automated Tests</li>
+      <li>Python</li>
     <ul>
   </body>
 </html>
