--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,14 @@
 <html>
-  <title>Disciplinas da pós</title>
+  <title>Assuntos Laboratórios</title>
   <body>
     <ul>
-      <li>Arquitetura de solução</li>
-      <li>Fullstack developer</li>
-      <li>Engenharia de Software</li>
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>Automated tests</li>
+      <li>Docker</li>
+      <li>Ansible</li>
+      <li>Terraform</li>
+      <li>Clean Architecture</li>
     <ul>
   </body>
-</html>
+  </html>
